fix - Correcion en eliminacion de DetallePago en el modulo de correciones, se ajusta ordenamiento de debitos en base a lo solicitado