@@ -3,45 +3,50 @@ package ledance.entidades;
 import jakarta.persistence.*;
 import jakarta.validation.constraints.NotNull;
 import lombok.*;
+
 import java.time.LocalDate;
 
-@Entity
-@Data
+@Getter
+@Setter
 @NoArgsConstructor
 @AllArgsConstructor
+@EqualsAndHashCode(onlyExplicitlyIncluded = true)
+@ToString(onlyExplicitlyIncluded = true) // clave: solo incluimos campos seguros
+@Entity
 @Table(name = "detalle_pagos",
         uniqueConstraints = {
                 @UniqueConstraint(columnNames = {"alumno_id", "matricula_id"}),
                 @UniqueConstraint(columnNames = {"alumno_id", "mensualidad_id"})
-        }
-)
+        })
 public class DetallePago {
 
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
+    @EqualsAndHashCode.Include
+    @ToString.Include
     private Long id;
 
     @Version
     private Long version;
 
     @Column(name = "descripcion_concepto")
+    @ToString.Include
     private String descripcionConcepto;
 
     @ManyToOne
-    @JoinColumn(name = "concepto_id", nullable = true)
+    @JoinColumn(name = "concepto_id")
     private Concepto concepto;
-
     @ManyToOne
-    @JoinColumn(name = "subconcepto_id", nullable = true)
+    @JoinColumn(name = "subconcepto_id")
     private SubConcepto subConcepto;
 
     @Column(name = "cuota_o_cantidad")
+    @ToString.Include
     private String cuotaOCantidad;
 
     @ManyToOne
     @JoinColumn(name = "bonificacion_id")
     private Bonificacion bonificacion;
-
     @ManyToOne
     @JoinColumn(name = "recargo_id")
     private Recargo recargo;
@@ -50,55 +55,55 @@ public class DetallePago {
     private Double importeInicial;
     private Double importePendiente;
 
-    // Renombrado a "aCobrar" siguiendo convencion Java
     @Column(name = "a_cobrar")
+    @ToString.Include
     private Double aCobrar;
 
     @ManyToOne
     @JoinColumn(name = "pago_id", nullable = false)
-    @ToString.Exclude
     private Pago pago;
 
-    @ManyToOne(cascade = CascadeType.ALL)
-    @JoinColumn(name = "mensualidad_id", nullable = true)
-    @ToString.Exclude
+    @ManyToOne
+    @JoinColumn(name = "mensualidad_id")
     private Mensualidad mensualidad;
 
-    @ManyToOne(cascade = CascadeType.ALL)
-    @JoinColumn(name = "matricula_id", nullable = true)
+    @ManyToOne
+    @JoinColumn(name = "matricula_id")
     private Matricula matricula;
 
     @ManyToOne
-    @JoinColumn(name = "stock_id", nullable = true)
+    @JoinColumn(name = "stock_id")
     private Stock stock;
-
     @ManyToOne
     @JoinColumn(name = "alumno_id", nullable = false)
     private Alumno alumno;
 
     @Column(nullable = false)
+    @ToString.Include
     private Boolean cobrado = false;
 
     @Enumerated(EnumType.STRING)
     @Column(nullable = false)
+    @ToString.Include
     private TipoDetallePago tipo;
 
     @Column(name = "fecha_registro", nullable = false)
+    @ToString.Include
     private LocalDate fechaRegistro;
 
     @Column(name = "tiene_recargo")
     private Boolean tieneRecargo = false;
-
     @Column(name = "es_clon")
     private Boolean esClon = false;
 
     @ManyToOne
-    @JoinColumn(name = "usuario_id", nullable = true)
+    @JoinColumn(name = "usuario_id")
     private Usuario usuario;
 
     @NotNull
     @Enumerated(EnumType.STRING)
     @Column(name = "estado_pago", nullable = false)
+    @ToString.Include
     private EstadoPago estadoPago = EstadoPago.ACTIVO;
 
     @Column(name = "removido")
@@ -114,24 +119,11 @@ public class DetallePago {
         normalizeFields();
     }
 
-    /**
-     * Centraliza la normalizacion de la descripcion, la asignacion de fechaRegistro y la descripcion por defecto para matricula.
-     */
     private void normalizeFields() {
-        // Ajuste fecha de registro: si esta asociado a un Pago con fecha, se usa esa; de lo contrario, se usa la fecha actual.
-        if (this.pago != null && this.pago.getFecha() != null) {
-            this.fechaRegistro = this.pago.getFecha();
-        } else if (this.fechaRegistro == null) {
-            this.fechaRegistro = LocalDate.now();
-        }
-        // Normalizar la descripcion a mayusculas.
-        if (this.descripcionConcepto != null) {
-            this.descripcionConcepto = this.descripcionConcepto.trim().toUpperCase();
-        }
-        // Asignar descripcion por defecto para matricula si es necesario.
-        if (this.matricula != null &&
-                (this.descripcionConcepto == null || this.descripcionConcepto.trim().isEmpty())) {
+        if (this.pago != null && this.pago.getFecha() != null) this.fechaRegistro = this.pago.getFecha();
+        else if (this.fechaRegistro == null) this.fechaRegistro = LocalDate.now();
+        if (this.descripcionConcepto != null) this.descripcionConcepto = this.descripcionConcepto.trim().toUpperCase();
+        if (this.matricula != null && (this.descripcionConcepto == null || this.descripcionConcepto.isBlank()))
             this.descripcionConcepto = "MATRICULA " + LocalDate.now().getYear();
-        }
     }
 }
